[package]
name = "raw"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
libraw_rs_vendor = "1.0.0"
rayon = "1.10"
webp = "0.3"
jpeg-encoder = "0.3.0"
kamadak-exif = "0.5.5"
img-parts = "0.3.0"
imageproc = "0.25.0"
chrono = "0.4"
ab_glyph = "0.2.28"
serde = { version = "1.0", features = ["derive"] }

[lib]
path = "src/raw.rs"