[package]
name = "actixw"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.7.2"
actix-files = "0.6.6"
actix-session = {version = "0.9.0",features = ["cookie-session"]}
actix-cors = "0.7.0"
actix-web-static-files = "4.0"
static-files = "0.2.1"
serde = { version = "1.0", features = ["derive"] }

blake2 = "0.10.6"
base16ct = {version = "0.2.0",features = ["alloc"]}

env_logger = "0.11.5"
futures-util = "0.3.30"
log = "0.4.22"
sanitize-filename = "0.5"
uuid = {version = "1.10.0",features = ["v4"]}
chrono = "0.4"

[build-dependencies]
static-files = "0.2.1"