[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
raw = { path = "../raw" }
actix-web = "4"
actix-multipart = "0.7.2"
actix-files = "0.6.6"
actix-session = {version = "0.9.0",features = ["cookie-session"]}
actix-cors = "0.7.0"
actix-web-static-files = "4.0"
static-files = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

blake2 = "0.10.6"
base16ct = {version = "0.2.0",features = ["alloc"]}
# base64 = "0.22.1"

kamadak-exif = "0.5.5"

# nom-exif = "1.3.0"

env_logger = "0.11.5"
futures-util = "0.3.30"
log = "0.4.22"
sanitize-filename = "0.5"
uuid = {version = "1.10.0",features = ["v4"]}
chrono = "0.4"

[build-dependencies]
static-files = "0.2.1"