[package]
name = "wsm_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "0.8.2", features = ["suspense"]}
sycamore-router = "0.8"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.17"
reqwasm = "0.5.0"
web-sys = {version = "0.3.69",features = ["HtmlOptionElement","HtmlInputElement","FileList"]}
reqwest = {version = "0.11.3",features = ["json","multipart"]}
graphql_client = {version = "0.14.0",features = ["reqwest"]}
serde = "1.0.147"
serde_json = "1.0"

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 's' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true
